<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineUnderCreateProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <TextView
            android:id="@+id/createProfileText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/exo_bold"
            android:gravity="center_vertical"
            android:text="@string/profile_page"
            android:textColor="?attr/android:textColor"
            app:autoSizePresetSizes="@array/autosize_text_sizes_24"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/guidelineUnderCreateProfileText"
            app:layout_constraintEnd_toStartOf="@id/buttonExit"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guidelineUnderCreateProfileText"
            android:src="@drawable/exit_svgrepo_com"
            android:background="@null"
            app:tint="?attr/colorError"
            />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePictureImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/default_avatar"
            android:padding="10dp"
            app:civ_border_width="5dp"
            app:civ_border_color="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toTopOf="@id/guidelineUnderCreateProfileText"
            app:layout_constraintBottom_toBottomOf="@id/guidelineFourtyPercent"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/profilePictureImage"
            app:dividerColor="?attr/colorPrimary"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userIdTextView"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:fontFamily="@font/exo_bold"
            android:gravity="center"
            android:text="@string/stub_userId"
            android:textColor="?attr/colorSecondary"
            app:autoSizePresetSizes="@array/autosize_text_sizes_18"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toTopOf="@id/guidelineFourtyPercent"
            app:layout_constraintBottom_toTopOf="@id/firstLastNameTextView"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/firstLastNameTextView"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:fontFamily="@font/exo_bold"
            android:gravity="center"
            android:text="@string/stub_name"
            app:autoSizePresetSizes="@array/autosize_text_sizes_18"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/userIdTextView"
            app:layout_constraintBottom_toTopOf="@+id/dietGoalTextView"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/firstLastNameTextView"
            app:dividerColor="?attr/colorPrimary"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dietGoalTextView"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:fontFamily="@font/exo_regular"
            android:gravity="center_vertical"
            android:text="@string/goalDiet"
            app:autoSizePresetSizes="@array/autosize_text_sizes_18"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/firstLastNameTextView"
            app:layout_constraintBottom_toTopOf="@+id/activityLevelTextView"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/activityLevelTextView"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:fontFamily="@font/exo_regular"
            android:gravity="center_vertical"
            android:text="@string/activityLevel"
            app:autoSizePresetSizes="@array/autosize_text_sizes_18"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/dietGoalTextView"
            app:layout_constraintBottom_toTopOf="@+id/profileWeightEditTextLayout"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileWeightEditTextLayout"
            style="@style/MyOutlinedTextFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            app:layout_constraintTop_toBottomOf="@id/activityLevelTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/profileHeightEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Вес"
                android:fontFamily="@font/exo_regular"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileHeightEditTextLayout"
            style="@style/MyOutlinedTextFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            app:layout_constraintTop_toBottomOf="@id/activityLevelTextView"
            app:layout_constraintStart_toEndOf="@id/profileWeightEditTextLayout"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Рост"
                android:fontFamily="@font/exo_regular"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateStartDietTextView"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:fontFamily="@font/exo_regular"
            android:gravity="center_vertical"
            android:text="@string/diet_start_date"
            app:autoSizePresetSizes="@array/autosize_text_sizes_18"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/profileWeightEditTextLayout"
            app:layout_constraintBottom_toTopOf="@+id/dateEndDietTextView"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateEndDietTextView"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:fontFamily="@font/exo_regular"
            android:gravity="center_vertical"
            android:text="@string/diet_end_date"
            app:autoSizePresetSizes="@array/autosize_text_sizes_18"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/dateStartDietTextView"

            />

        <LinearLayout
            android:id="@+id/settingsList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@id/dateEndDietTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="?attr/colorPrimary" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editDataItem"
                android:layout_width="match_parent"
                android:layout_height="50sp"

                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/editDataText"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="Изменить данные"
                    android:fontFamily="@font/exo_regular"
                    android:gravity="center_vertical"
                    app:autoSizePresetSizes="@array/autosize_text_sizes_18"
                    app:autoSizeTextType="uniform"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/arrowIcon"/>

                <ImageView
                    android:id="@+id/arrowIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_forward"
                    android:rotation="180"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="?attr/colorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/themeSwitchItem"
                android:layout_width="match_parent"
                android:layout_height="50sp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/themeText"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="Темная тема"
                    android:fontFamily="@font/exo_regular"
                    android:gravity="center_vertical"
                    app:autoSizePresetSizes="@array/autosize_text_sizes_18"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/themeSwitch"/>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/themeSwitch"
                    style="@style/CustomSwitchStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:dividerColor="?attr/colorPrimary" />

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineFourtyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />






        <!--        <com.google.android.material.button.MaterialButton-->
        <!--            android:id="@+id/createProfileButton"-->
        <!--            style="@style/LightPurpleMaterialButton"-->
        <!--            android:layout_width="120dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:clickable="true"-->
        <!--            android:text="Завершить"-->
        <!--            android:textSize="@dimen/top_strings_size_16"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:fontFamily="@font/exo_regular"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/guidelineBottom" />-->


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>